add_subdirectory(api)
add_subdirectory(platform)
add_subdirectory(api)
add_subdirectory(accel)
add_subdirectory(adc)
add_subdirectory(dac)
add_subdirectory(net)

# add_subdirectory(accel)
# add_subdirectory(adc-dac)
# add_subdirectory(afe)
# add_subdirectory(amplifiers)
# add_subdirectory(axi_core)
# add_subdirectory(cdc)